--- a/assets/style.css
+++ b/assets/style.css
@@ -5,16 +5,13 @@
 
 html {
     background-color: black;
-}
-
-h1 {
-    font-size: 40px;
-    font-family: serif;
-    color: var(--main-blue);
+    background-image: url(https://img.freepik.com/free-photo/wall-wallpaper-concrete-colored-painted-textured-concept_53876-31799.jpg?size=626&ext=jpg);
 }
 
 h2 {
     color: var(--main-blue);
+    text-align: center;
+    font-size: 80px;
 }
 
 .description {
@@ -22,23 +19,61 @@ h2 {
     color: var(--main-blue);
 }
 
-.navbar {
+nav {
+    margin: auto;
     display: flex;
-    flex-direction: column;
-    padding-left: 0%;
-    margin-bottom: 0;
-    list-style: none;
-    font-size: 15px;
+    width: 100%;
+    margin-left: 2%;
+    height: 50px;
+    line-height: 50px;
+    margin-bottom: 50px;
+
+    /* font-size: 15px; */
+    /* justify-content: flex-end;
+    justify-content: space-evenly; */
     color: var(--main-blue);
 }
 
+.topnavleft a {
+    color: var(--main-blue);
+    width: 40%;
+}
+.topnavright {
+    margin-left: 30%;
+    width: 40%;
+    /* line-height: 120px;
+    margin-right: 17.2%;
+    word-spacing: 50px;
+    font-family: Arial, Helvetica, sans-serif;
+    padding: 0; */
+}
+
+section {
+    border-style: solid;
+    color: darkgray;
+    width: 60%;
+    height: auto;
+    text-align: center;
+    margin: auto;
+}
+
 a {
+    font-size: 50px;
     text-decoration: none;
     color: var(--main-blue);
 }
 
+p {
+    font-size: 30px;
+}
+
 img {
     border: var(--main-blue);
+    width: 30%;
+    height: auto;
+    float: left;
+    margin-right: 5px;
+    margin-left: 5px;
 }
 
 .auto {
