--- a/assets/style.css
+++ b/assets/style.css
@@ -12,7 +12,7 @@
 
 html {
     font-size: 62.5%;
-    background: linear-gradient(lightCyan, skyBlue);
+    background: linear-gradient(90deg, lightCyan, skyBlue);
 }
 
 h2 {
