--- a/assets/style.css
+++ b/assets/style.css
@@ -28,39 +28,17 @@ h3 {
     width: 79%;
 }
 
-/* how do i make the black background not extend out???
-I tried adding a span but I couldnt get it to work*/
-
-nav {
-    margin: auto;
-    display: flex;
-    /* width: 100%;
-    margin-left: 2%;
-    height: 50px;
-    line-height: 50px;
-    margin-bottom: 50px; */
-
-    /* font-size: 15px; */
-    /* justify-content: flex-end;
-    justify-content: space-evenly; */
-    color: var(--main-blue);
+.topnavleft {
+    display: inline;
+    position: relative;
+    left: 0%;
 }
 
-.topnavleft a {
-    color: var(--main-blue);
-    width: 40%;
-}
 .topnavright {
-    margin-left: 30%;
-    width: 40%;
-    /* line-height: 120px;
-    margin-right: 17.2%;
-    word-spacing: 50px;
-    font-family: Arial, Helvetica, sans-serif;
-    padding: 0; */
+    display: inline;
+    position: relative;
+    right: 0%;
 }
-/* I tried putting the clear both and it didn't work here either
-I am tring to make a bigger space in between the navigation bar and the About me */
 
 .container {
     height: 500px;
